hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_offsetSet_one_invalid_parameter.php
<?php
$list = new SplDoublyLinkedList();
$a = $list->offsetSet(2);
if(is_null($a)) {
	echo 'PASS';
}
?>